tests/paczka1/small_fuzzy/61785320.err
Error in line 1: XGUloXL14 A246 49,6
Error in line 6: NTcsAz6d A404 22,5
